# axiom

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DATA_INVENTORY.md  Dockerfile  GUIDANCE_DOCS.md  QUICK_START_GUIDANCE.md  README.md  SUMMARY.md  modal_app.py  pyproject.toml
.github/workflows/: ci.yml
changelog.d/: agent-ingestion-runbook.added.md  canada-source-first.added.md  indiana-code.added.md  montana-code.added.md  navigation-nodes.added.md  nebraska-revised-statutes.added.md  nevada-nrs.added.md  policyengine-towncrier.changed.md  state-adapters-wave1.added.md  towncrier.added.md  washington-rcw.added.md
docs/: DC_IMPORT_GUIDE.md  DC_TAX_EXPLORATION.md  STATE_SOURCES.md  agent-ingestion-runbook.md  corpus-pipeline.md  historical-versioning.md  rule-references.md  source-discovery-checklist.md
docs/adapters/: california-mpp.md
docs/architecture/: source-organization.md
docs/infrastructure/: R2_SETUP.md
manifests/: state-statute-agent-queue.yaml  state-statutes.current.yaml  us-ca-capi-regulations.yaml  us-ca-cdss-mpp-calfresh.yaml  us-ca-ftb-2024-tax-instructions.yaml  us-co-snap-primary-policy.yaml  us-hhs-poverty-guidelines.yaml  us-ia-revenue-tax-guidance.yaml  us-id-tax-regulations.yaml  us-irs-guidance.yaml  us-medicaid-chip-eligibility-levels.yaml  us-ne-revenue-regulations.yaml  us-snap-guidance.yaml
manifests/releases/: current.json
scripts/: add_rev_proc_metadata.py  ak_to_akn.py  ar_create_akn_index.py  ar_to_akn.py  archive_pe_sources.py  backfill_us_statute_title_containers.py  build_navigation_index.py  ca_to_akn.py  catalog_snap.py  convert_co_to_akn.py  convert_ma_to_akn.py  convert_me_to_akn.py  convert_mi_to_akn.py  convert_mo_to_akn.py  convert_sd_to_akn.py  convert_wy_to_akn.py  ct_to_akn.py  extract_dc_tax.py  extract_references.py  extract_usc_xrefs.py  fetch_rev_proc.py  fl_to_akn.py  hi_to_akn.py  id_to_akn.py  il_to_akn.py  in_to_akn.py  ingest_all_cfr.py  ingest_ca_laws.py  ingest_canada.py  ingest_cfr_parts.py  ingest_dc_code.py  ingest_ny_laws.py  ingest_rulemaking.py  ingest_state_laws.py  ingest_states_supabase.py  ingest_title26.py  ingest_titles.py  ks_to_akn.py  la_to_akn.py  md_to_akn.py  (+37 more)
src/atlas/: cli.py  crawl.py  encoder.py  models.py  models_statute.py
src/axiom/: __init__.py  archive.py  cli.py  converters.py  crawl.py  crawl_playwright.py  encoder.py  models_akoma_ntoso.py  models_guidance.py  models_regulation.py  models_uk.py  verifier.py  writer.py
src/axiom_corpus/: __init__.py  archive.py  cli.py  converters.py  crawl.py  crawl_playwright.py  encoder.py  models.py  models_akoma_ntoso.py  models_canada.py  models_guidance.py  models_regulation.py  models_statute.py  models_uk.py  writer.py
supabase/migrations/: 20241211000000_document_archive.sql  20260416170000_arch_rules_snap_indexes.sql  20260416170000_corpus_provisions_snap_indexes.sql  20260416200000_arch_rules_search_rpc.sql  20260416200000_corpus_provisions_search_rpc.sql  20260416220000_arch_rule_references.sql  20260416220000_corpus_provision_references.sql  20260416230000_add_raw_source_documents.sql  20260416230000_rename_arch_to_akn_add_raw.sql  (+33 more)
tests/: test_ak_converter.py  test_al_converter.py  test_api_main.py  test_ar_converter.py  test_archive.py  test_az_converter.py  test_ca_laws_converter.py  test_ca_state_converter.py  test_canada_parser.py  test_cfr_fetcher.py  test_cfr_parser.py  test_citations.py  test_claims.py  test_cli.py  test_clml_parser.py  test_co_converter.py  test_converter_base.py  test_converters_base.py  test_converters_ecfr.py  test_converters_legacy.py  test_converters_mn.py  test_converters_nz.py  test_converters_state_to_uslm.py  test_converters_tn.py  test_corpus_analytics.py  test_corpus_artifacts_coverage.py  test_corpus_california_mpp.py  test_corpus_canada.py  test_corpus_cli.py  test_corpus_delaware.py  test_corpus_documents.py  test_corpus_illinois.py  test_corpus_indiana.py  test_corpus_louisiana.py  test_corpus_michigan.py  test_corpus_models.py  test_corpus_montana.py  test_corpus_navigation.py  test_corpus_navigation_supabase.py  test_corpus_nevada.py  (+107 more)
(+395 files in other folders)
