[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
description = "Foundational archive for all raw government source files - statutes, IRS guidance, microdata, crosstabs, and parameters"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "The Axiom Foundation", email = "hello@axiom-foundation.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: XML",
]
requires-python = ">=3.14"
dependencies = [
    "lxml>=5.0",
    "pydantic>=2.0",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "httpx>=0.26",
    "click>=8.0",
    "rich>=13.0",
    "sqlite-utils>=3.35",
    "anthropic>=0.75.0",
    "requests>=2.32.5",
    "pyyaml>=6.0.3",
    "modal>=0.50",
    "beautifulsoup4>=4.12",
    "boto3>=1.35",
    "playwright>=1.57.0",
    "pymupdf>=1.25.0",  # PDF text extraction for IRS guidance
    "openpyxl>=3.1.5",
    "supabase>=2.27.0",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.2",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "towncrier>=23.0",
]
postgres = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]
verify = [
    "dpath>=2.0",
    "policyengine-core>=3.20",
    "policyengine-us>=1.45",
]

[project.scripts]
atlas = "atlas.cli:main"
atlas-build = "atlas.scripts.build_archive:main"
atlas-pipeline = "atlas.pipeline.cli:main"

[project.urls]
Homepage = "https://github.com/TheAxiomFoundation/atlas"
Documentation = "https://github.com/TheAxiomFoundation/atlas"
Repository = "https://github.com/TheAxiomFoundation/atlas"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]  # B008: FastAPI Query() in defaults is idiomatic

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N806", "SIM117", "B017", "F811"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as requiring external API access (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.towncrier]
name = "atlas"
package = "atlas"
package_dir = "src"
directory = "changes"
filename = "CHANGELOG.md"
title_format = "{name} {version} ({project_date})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = true

[tool.coverage.run]
source = ["atlas"]
omit = [
    "src/atlas/crawl.py",
    "src/atlas/crawl_playwright.py",
    "src/atlas/scripts/*",
    "src/atlas/ingest/*",
    "src/atlas/cli.py",
    "src/atlas/converters.py",
    "src/atlas/storage/postgres.py",
    "src/atlas/storage/supabase.py",
    "src/atlas/query/supabase.py",
    "src/atlas/fetchers/legislation_uk.py",
    "src/atlas/fetchers/legislation_canada.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "pass$",
    "self\\._client = httpx\\.Client",
    "httpx\\.Client\\(",
    "time\\.sleep\\(",
    "response\\.raise_for_status\\(\\)",
]
exclude_also = [
    "def _rate_limit\\(self\\)",
    "def _get\\(self, url",
    "@property\\s+def client",
]
fail_under = 100
